--- a/views/team.erb
+++ b/views/team.erb
@@ -5,10 +5,16 @@
   <title>Basketball Team</title>
  </head>
  <body>
- 
 
+   <h1>Team Name: <%= @team.capitalize %></h1>
+   <form>
+     <p>Coach: <%= @coach %></p>
+     <p>Point Guard: <%= @pg %></p>
+     <p>Shooting Guard: <%= @sg %></p>
+     <p>Small Forward: <%= @sf %></p>
+     <p>Power Forward: <%= @pf %></p>
+     <p>Center: <%= @c %></p>
+   </form>
 
  </body>
 </html>
-
-
